agregando otro cambio al archivos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> agregando titulos </h1>
+    <p> esto es solo un parrafo </p>
     
 </body>
 </html>
