agregando cambio en rama natalia

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1> agregando titulos </h1>
     <p> esto es solo un parrafo </p>
-    
+    <p> XXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+    <h1> agregando titulo para natalia</h1>
+    <p> omaga </p>
+
 </body>
 </html>
